# delta_residual

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  SECURITY.md  cookiecutter-config-file.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml
delta_residual/: __init__.py  __main__.py  general_delta.py  matching_strategy.py  parallel_adpater.py  soft_prompt.py  utils.py
delta_residual/parallel_adpater/: __init__.py  general_parallel_adapter.py  lora.py
docker/: README.md
tests/: test_lora.py  test_mnist.py  test_parallel.py  test_soft_prompt.py
tests/test_example/: test_hello.py
