# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/
[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "delta_residual"
version = "0.1.0"
description = "A minimal PyTorch re-implementation of Parameter-Efficient Fine-Tuning (Delta Tuning)."
readme = "README.md"
authors = ["Handicraft-Computing-Team <12011404@mail.sustech.edu.cn>"]
license = "Apache Software License 2.0"
repository = "https://github.com/Handicraft-Computing-Team/delta_residual"
homepage = "https://github.com/Handicraft-Computing-Team/delta_residual"

# Keywords description https://python-poetry.org/docs/pyproject/#keywords
keywords = []  #! Update me

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [  #! Update me
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
]

[tool.poetry.scripts]
# Entry points for the package https://python-poetry.org/docs/pyproject/#scripts
"delta_residual" = "delta_residual.__main__:app"



[tool.poetry.dependencies]
python = "^3.8"

typer = {extras = ["all"], version = "^0.4.0"}
rich = "^10.14.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-html = "^3.1.1"
pytest-cov = "^3.0.0"
bandit = "^1.7.1"
black = "^22.12"
isort = {extras = ["colors"], version = "^5.10.1"}
pre-commit = "^2.15.0"
coverage = "^6.1.2"
coverage-badge = "^1.1.0"




[tool.black]
# https://github.com/psf/black
target-version = ["py38"]
line-length = 88
color = true

exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
)/
'''

[tool.isort]
# https://github.com/timothycrosley/isort/
py_version = 38
line_length = 88

sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
include_trailing_comma = true
profile = "black"
multi_line_output = 3
indent = 4
color_output = true


[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# Directories that are not visited by pytest collector:
norecursedirs =["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]

# Extra options:
addopts = [
  "--strict-markers",
  "--tb=short",
  "--doctest-modules",
  "--doctest-continue-on-failure",
]

[tool.coverage.run]
source = ["tests"]

[coverage.paths]
source = "delta_residual"

[coverage.run]
branch = true

[coverage.report]
fail_under = 50
show_missing = true
